# druids

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  DEVELOPMENT.md  GOALS.md  OVERVIEW.md  QUICKSTART.md  README.md  RUST_GUIDE.md  SETUP.md  STATE.md  STYLE.md  TESTING.md  docker-compose.yml  druids-rs-progress.md  fixes.md  github_app_manifest.json
bridge/: Cargo.toml  README.md  bridge.py  pyproject.toml
bridge/src/: app.rs  main.rs  process.rs  relay.rs
cli/: README.md  pyproject.toml
cli/orpheus/: __init__.py  auth.py  client.py  config.py  display.py  git.py  main.py
cli/orpheus/commands/: auth.py  programs.py
client/: README.md  flake.nix  pyproject.toml
client/druids/: __init__.py  client.py  config.py  display.py  git.py  main.py
client/druids/commands/: auth.py  init.py  secret.py  skill.py
client/druids/data/: llms.txt
client/druids/lib/: __init__.py  context.py
client/druids/programs/: __init__.py  build.py  main.py  review.py
client/druids/skills/: SKILL.md  write-spec.md
client/tests/: test_cli.py  test_client.py  test_skill_install.py
druids-rs/: .env.example  .gitignore  Cargo.toml  README.md  VERIFICATION.md  clippy.toml  config.json.example  example.env
druids-rs/.github/workflows/: ci.yml  release.yml
druids-rs/crates/druids-bridge/: Cargo.toml
druids-rs/crates/druids-bridge/src/: lib.rs  main.rs
druids-rs/crates/druids-client/: Cargo.toml  README.md
druids-rs/crates/druids-client/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  retry.rs  streaming.rs  tests.rs  types.rs
druids-rs/crates/druids-core/: Cargo.toml
druids-rs/crates/druids-core/src/: agent.rs  common.rs  config.rs  error.rs  events.rs  execution.rs  lib.rs
druids-rs/crates/druids-db/: .env.example  Cargo.toml  IMPLEMENTATION.md  README.md
druids-rs/crates/druids-db/migrations/: 20260309000000_initial_schema.sql  20260316000000_add_program_table.sql  20260325000000_add_devbox_resources.sql
druids-rs/crates/druids-db/src/: crypto.rs  error.rs  lib.rs  pool.rs
druids-rs/crates/druids-db/tests/: integration_test.rs
druids-rs/crates/druids-runtime/: Cargo.toml
druids-rs/crates/druids-runtime/src/: agent.rs  context.rs  error.rs  events.rs  lib.rs  server.rs
druids-rs/crates/druids-server/: Cargo.toml
druids-rs/crates/druids-server/src/: config.rs  lib.rs  main.rs
runtime/: pyproject.toml
runtime/druids_runtime/: __init__.py  __main__.py
runtime/tests/: test_runtime.py  test_runtime_state.py
server/: README.md  VERIFICATION.md  bundle.py  inspect2.py  inspect3.py  inspect4.py  inspect5.py  inspect6.py  inspect7.py  inspect_instances.py  pyproject.toml
server/agent-skills/create-pr/: SKILL.md
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 24af03683ef2_add_devbox_vcpus_memory_mb_disk_mb_.py  27476bfd1225_initial_schema.py  2aab81d55f68_initial_schema.py  501a3110477d_add_elo_fields.py  794887f2f664_add_setup_session_table.py  81e72be1adba_add_stripe_fields_to_user.py  a2b3c4d5e6f7_spec_table.py  b3c4d5e6f7a8_user_spec_table.py  b3e7a1c94d52_add_token_usage_to_execution.py  c4f9e2b31a7d_add_setup_slug_to_devbox.py  d7a1f3e52b9c_repo_wide_devboxes.py  f8a54c1a865d_add_program_table_and_execution_program_.py
server/druids_server/: __init__.py  app.py  config.py  paths.py
server/druids_server/api/: deps.py  github.py
server/druids_server/api/helpers/: execution_stream.py  sandbox.py  trace_format.py
server/druids_server/api/routes/: __init__.py  agent_mcp.py  bridge.py  executions.py  health.py  mcp.py  me.py  programs.py  runtime.py  secrets.py  setup.py
server/druids_server/db/: session.py
server/druids_server/db/models/: devbox.py  execution.py  program.py  secret.py  setup_session.py  user.py
server/druids_server/lib/: __init__.py  acp.py  caption.py  connection.py  execution.py  machine.py  program_agent.py  program_dispatch.py  setup_session.py  tools.py  trace.py
server/druids_server/lib/agents/: __init__.py  base.py  claude.py  (+3 more)
server/druids_server/utils/: crypto.py  execution_trace.py  forwarding_tokens.py  slugs.py  templates.py
server/orpheus/: __init__.py  app.py  config.py  paths.py  programs.py
server/orpheus/api/: auth.py  deps.py  github.py  launch.py
server/orpheus/db/: session.py
server/orpheus/lib/: __init__.py  connection.py  devbox.py  elo.py  execution.py  execution_trace.py  forwarding_tokens.py  machine.py  message.py  morph.py  program.py  spec.py
server/orpheus/utils/: slugs.py
server/programs/: __init__.py  claude.py  codex.py  collaborate_terminal.py  gemini.py  program_utils.py  verify.py
server/results/archive/: terminal-bench-v2-claude-opus-2026-02-06.json  terminal-bench-v2-codex-52-high-reasoning-2026-02-06.json  terminal-bench-v2-collaborate-opus46-codex52-2026-02-06.json
server/scripts/: migrate_traces.py  monitor_runs.py  overnight_runner.sh
server/tests/: __init__.py  conftest.py
server/tests/api/: conftest.py  test_admin.py  test_agent_mcp.py  test_agent_trace.py  test_allowlist.py  test_auth.py  test_execution_activity.py  test_execution_streaming.py  test_fork_endpoint.py  test_health.py  test_mcp.py  test_mcp_filtering.py  test_pr_merged.py  test_programs.py  test_proxy_anthropic.py  test_setup.py  test_setup_session_api.py  test_submit.py  test_tasks.py  test_webhooks.py
server/tests/db/: test_devbox.py  test_program.py
server/tests/integration/: conftest.py  stub_agent.py  stub_agent_exit.py  stub_agent_flood.py  test_connection_integration.py  test_execution_integration.py  test_relay.py  test_relay_e2e.py  test_relay_stress.py  test_sse_reconnection.py
server/tests/lib/: __init__.py  test_agent.py  test_codex_config.py  test_connection_system_prompt.py  test_docker_sandbox.py  test_elo.py  test_execution_builtins.py  test_execution_prompt.py  test_execution_relay.py  test_fork.py  test_fork_integration.py  test_forwarding_tokens.py  test_machine.py  test_parse_service_spec.py  test_program.py  test_prompt_nowait.py  test_protocol_conformance.py  test_spec.py  test_tool_schemas.py
server/tests/programs/: test_system_prompts.py
(+156 files in other folders)
