[project]
name = "orpheus-bridge"
version = "0.1.0"
description = "Orpheus bridge process for Morph VMs"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "fastapi",
    "httpx>=0.28.1",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bridge.py"]
