[project]
name = "druids-bridge"
version = "0.1.0"
description = "Druids bridge process for Morph VMs"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bridge.py"]
