[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orpheus-cli"
version = "0.1.1"
description = "A command-line interface for orchestrating AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "questionary>=2.1.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.scripts]
orpheus = "orpheus.main:app"

[tool.hatch.build.targets.wheel]
packages = ["orpheus"]

[tool.uv]
package = true
