[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "druids"
version = "0.1.5"
description = "Druids client: CLI and type definitions for writing programs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "questionary>=2.1.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
]

[project.optional-dependencies]
server = ["druids-server"]

[project.scripts]
druids = "druids.main:app"

[tool.hatch.build.targets.wheel]
packages = ["druids"]

[tool.uv]
package = true
