[workspace]
resolver = "2"
members = [
    "crates/druids-core",
    "crates/druids-db",
    "crates/druids-server",
    "crates/druids-client",
    "crates/druids-runtime",
    "crates/druids-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Druids Contributors"]
license = "MIT"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# WebSocket
tokio-tungstenite = "0.24"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "uuid"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
druids-core = { path = "crates/druids-core" }
druids-db = { path = "crates/druids-db" }
druids-runtime = { path = "crates/druids-runtime" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
