[project]
name = "druids-runtime"
version = "0.1.0"
description = "Druids execution runtime: runs user programs in sandboxes"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "uvicorn",
    "starlette",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["druids_runtime"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
