[project]
name = "druids-server"
version = "0.1.0"
description = "Druids server: agent orchestration and execution engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "fastmcp",
    "httpx",
    "pydantic-settings",
    "sqlmodel",
    "aiosqlite>=0.20.0",
    "alembic",
    "coolname",
    "agent-client-protocol",
    "PyJWT[crypto]",
    "cryptography",
    "pyyaml",
    "anthropic",
    "docker>=7.1.0",
    "asyncssh>=2.22.0",
    "packaging",
    "greenlet",
]

[tool.uv.sources]
druids = { path = "../client", editable = true }
druids-runtime = { path = "../runtime", editable = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "druids",
    "druids-runtime",
]

[project.scripts]
druids-server = "druids_server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["druids_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["slow: tests that are slow (skipped by default, use --slow to run)"]
