[package]
name = "druids-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "druids-bridge"
path = "src/main.rs"

[dependencies]
druids-core = { path = "../druids-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

reqwest = { workspace = true }

[dev-dependencies]
