[package]
name = "druids-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "druids"
path = "src/main.rs"

[dependencies]
# Core dependencies
druids-core = { path = "../druids-core" }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }
url = "2.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# SSE streaming
eventsource-client = "0.13"
futures = "0.3"
async-stream = "0.3"

# Configuration
dotenvy = { workspace = true }
dirs = "5.0"

# CLI
clap = { workspace = true }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"
tempfile = "3.13"
