[package]
name = "druids-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
druids-core = { path = "../druids-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
