[package]
name = "druids-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
druids-core = { path = "../druids-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
